[gd_scene load_steps=9 format=3 uid="uid://eu46gp4vv0hv"]

[ext_resource type="Texture2D" uid="uid://bqf3dx4cbcfad" path="res://art/simple_slimes-Recovered.png" id="1_sg1qy"]
[ext_resource type="Script" path="res://FoodSpawner.gd" id="2_hewae"]
[ext_resource type="PackedScene" uid="uid://n4uxpv6002g" path="res://scenes/wall.tscn" id="4_533sa"]
[ext_resource type="Script" path="res://Time_Left_Updater.gd" id="4_mgv1n"]
[ext_resource type="Script" path="res://GenerationManager.gd" id="4_yslye"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_drgs8"]
texture = ExtResource("1_sg1qy")
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_ewn4q"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_drgs8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65tib"]
size = Vector2(1860.38, 914.75)

[node name="test_level_2" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_ewn4q")
format = 2
layer_0/tile_data = PackedInt32Array(720915, 131072, 2, 720916, 131072, 2, 720917, 131072, 2, 720918, 131072, 2, 720919, 131072, 2, 720920, 131072, 2, 720921, 131072, 2, 720922, 131072, 2, 720923, 131072, 2, 720924, 131072, 2, 720925, 131072, 2, 720926, 131072, 2, 720927, 131072, 2, 720928, 131072, 2, 720929, 131072, 2, 720930, 131072, 2, 720931, 131072, 2, 720932, 131072, 2, 720933, 131072, 2, 720934, 131072, 2, 720935, 131072, 2, 720936, 131072, 2, 720937, 131072, 2, 720938, 131072, 2, 720939, 131072, 2, 720940, 131072, 2, 720941, 131072, 2, 720942, 131072, 2, 720943, 131072, 2, 720944, 131072, 2, 720945, 131072, 2, 720946, 131072, 2, 720947, 131072, 2, 786483, 131072, 2, 852019, 131072, 2, 917555, 131072, 2, 983091, 131072, 2, 1048627, 131072, 2, 1114163, 131072, 2, 1179699, 131072, 2, 1245235, 131072, 2, 1310771, 131072, 2, 1376307, 131072, 2, 1441843, 131072, 2, 1507379, 131072, 2, 1572915, 131072, 2, 1638451, 131072, 2, 1703987, 131072, 2, 1769523, 131072, 2, 1835059, 131072, 2, 1835058, 131072, 2, 1835057, 131072, 2, 1835056, 131072, 2, 1835055, 131072, 2, 1835054, 131072, 2, 1835053, 131072, 2, 1835052, 131072, 2, 1835051, 131072, 2, 1835050, 131072, 2, 1835049, 131072, 2, 1835048, 131072, 2, 1835047, 131072, 2, 1835046, 131072, 2, 1835045, 131072, 2, 1835044, 131072, 2, 1835043, 131072, 2, 1835042, 131072, 2, 1835041, 131072, 2, 1835040, 131072, 2, 1835039, 131072, 2, 1835038, 131072, 2, 1835037, 131072, 2, 1835036, 131072, 2, 1835035, 131072, 2, 1835034, 131072, 2, 1835033, 131072, 2, 1835032, 131072, 2, 1835031, 131072, 2, 1835030, 131072, 2, 1835029, 131072, 2, 1835028, 131072, 2, 1835027, 131072, 2, 1769491, 131072, 2, 1703955, 131072, 2, 1638419, 131072, 2, 1572883, 131072, 2, 1507347, 131072, 2, 1441811, 131072, 2, 1376275, 131072, 2, 1310739, 131072, 2, 1245203, 131072, 2, 1179667, 131072, 2, 1114131, 131072, 2, 1048595, 131072, 2, 983059, 131072, 2, 917523, 131072, 2, 851987, 131072, 2, 786451, 131072, 2)

[node name="AI_Players" type="Node" parent="."]

[node name="FoodSpawner" type="Area2D" parent="."]
visible = false
position = Vector2(962, 587)
collision_layer = 0
collision_mask = 0
script = ExtResource("2_hewae")

[node name="FoodTimer" type="Timer" parent="FoodSpawner"]
autostart = true

[node name="FoodList" type="Node" parent="FoodSpawner"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FoodSpawner"]
position = Vector2(1.8125, -52.375)
shape = SubResource("RectangleShape2D_65tib")

[node name="GenerationManager" type="Node2D" parent="."]
script = ExtResource("4_yslye")

[node name="Gen_Timer" type="Timer" parent="GenerationManager"]
wait_time = 120.0
autostart = true

[node name="Time_Left_Updater" type="Timer" parent="GenerationManager/Gen_Timer"]
autostart = true
script = ExtResource("4_mgv1n")

[node name="Bounds" type="Node2D" parent="GenerationManager"]

[node name="UpperLeft" type="Marker2D" parent="GenerationManager/Bounds"]

[node name="LowerRight" type="Marker2D" parent="GenerationManager/Bounds"]
position = Vector2(1920, 1080)

[node name="Wall" parent="." instance=ExtResource("4_533sa")]
position = Vector2(0, 540)
scale = Vector2(10, 1080)

[node name="Wall2" parent="." instance=ExtResource("4_533sa")]
position = Vector2(960, 1)
scale = Vector2(1920, 10)

[node name="Wall3" parent="." instance=ExtResource("4_533sa")]
position = Vector2(1920, 540)
scale = Vector2(10, 1080)

[node name="Wall4" parent="." instance=ExtResource("4_533sa")]
position = Vector2(960, 1080)
scale = Vector2(1920, 10)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
zoom = Vector2(0.932, 0.932)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[connection signal="timeout" from="FoodSpawner/FoodTimer" to="FoodSpawner" method="_on_timer_timeout" flags=18]
[connection signal="timeout" from="GenerationManager/Gen_Timer" to="FoodSpawner" method="_on_gen_timer_timeout"]
[connection signal="timeout" from="GenerationManager/Gen_Timer" to="GenerationManager" method="_on_gen_timer_timeout"]
[connection signal="timeout" from="GenerationManager/Gen_Timer/Time_Left_Updater" to="GenerationManager/Gen_Timer/Time_Left_Updater" method="_on_timeout"]
